--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         submodules: recursive
     - name: initialize
-      run: cmake -G "Unix Makefiles" .
+      run: cmake -G "Unix Makefiles" . -DSTRTYPE_TESTS=ON
     - name: compile
       run: cmake --build . 
     - name: test
